# typed-ids

./: Cargo.toml  Makefile.toml
.github/workflows/: release.yml  rust.yml
src/: id.rs  lib.rs
src/generator/: mod.rs
src/generator/async/: generator.rs  mod.rs  serial_u32.rs  serial_u64.rs  serial_usize.rs
src/generator/serial/: mod.rs  serial_u32.rs  serial_u64.rs  serial_usize.rs
src/generator/sync/: generator.rs  serial_u32.rs  serial_u64.rs  serial_usize.rs
src/serial/: mod.rs  serial_u32.rs  serial_u64.rs  serial_usize.rs
